@@ -58,7 +58,7 @@ namespace CIAO
       auto_ptr<CIAO::Logger_Service> logger_;
 
       ACE_CString uuid_;
-      ACE_CString callback_ior_str_;
+      ACE_TString callback_ior_str_;
       ACE_TString output_file_;
       auto_ptr<ComponentServer_Configurator> configurator_;
 
